unpackaged/main/default/objects/CiAnywhereSetting__c/CiAnywhereSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>common integration settings to be used in CiAnywhere integration</description>
    <label>CiAnywhere Settings</label>
</CustomObject>