unpackaged/main/default/objects/CiAnywhereSetting__c/fields/Host_URL__c.field-meta.xml
<CustomField>
    <fullName>Host_URL__c</fullName>
    <description>CIAnywhere API Endpoint. This URL must be added in Remote Site Setting to authorise calls to network addresses</description>
    <label>Host URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>