unpackaged/main/default/objects/CiAnywhereSetting__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>API password  to be passed in authentication header request</description>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>