unpackaged/main/default/objects/CiAnywhereSetting__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>API username to be passed in authentication header request</description>
    <label>Username</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>